# abls-habitat-api

./: .gitignore  CMakeLists.txt  Containerfile  Create_image_container.sh  Dump_cache.sh  Erreur.c  Http.c  INSTALL.sh  INSTALL_MQTT.sh  Interp.c  Makefile.am  README.md  abls-commit-plugin.sh  abls-habitat-api.conf.sample  abls-habitat-api.service  abonnement.c  agent.c  agent_websocket.c  alexa.c  archive.c  audio.c  audit_log.c  autogen.sh  base_icones.sql  build.sh  camera.c  configure.ac  database.c  dictionnaire.c  dls.c  dls_package.c  dls_params.c  domains.c  fr-abls-habitat-api.conf.sample  fr-abls-habitat-api.service  gpiod.c  histo.c  http_websocket.c  httpd-abls-habitat.fr.conf.sample  icons.c  (+45 more)
.deps/: abls_habitat_api-Erreur.Po  abls_habitat_api-Http.Po  abls_habitat_api-agent.Po  abls_habitat_api-alexa.Po  abls_habitat_api-archive.Po  abls_habitat_api-audio.Po  abls_habitat_api-audit_log.Po  abls_habitat_api-database.Po  abls_habitat_api-dictionnaire.Po  abls_habitat_api-dls.Po  abls_habitat_api-dls_package.Po  abls_habitat_api-dls_params.Po  abls_habitat_api-domains.Po  abls_habitat_api-gpiod.Po  abls_habitat_api-histo.Po  abls_habitat_api-icons.Po  abls_habitat_api-imsgs.Po  abls_habitat_api-json.Po  abls_habitat_api-mail.Po  abls_habitat_api-mapping.Po  abls_habitat_api-message.Po  abls_habitat_api-meteo.Po  abls_habitat_api-mnemo_AI.Po  abls_habitat_api-mnemo_AO.Po  abls_habitat_api-mnemo_BI.Po  abls_habitat_api-mnemo_CH.Po  abls_habitat_api-mnemo_CI.Po  abls_habitat_api-mnemo_DI.Po  abls_habitat_api-mnemo_DO.Po  abls_habitat_api-mnemo_HORLOGE.Po  abls_habitat_api-mnemo_MONO.Po  abls_habitat_api-mnemo_REGISTRE.Po  abls_habitat_api-mnemo_TEMPO.Po  abls_habitat_api-mnemo_VISUEL.Po  abls_habitat_api-mnemo_WATCHDOG.Po  abls_habitat_api-mnemos.Po  abls_habitat_api-modbus.Po  abls_habitat_api-mqtt.Po  abls_habitat_api-phidget.Po  abls_habitat_api-shelly.Po  (+11 more)
.github/workflows/: Build_test.yml  codeql.yml  push_trunk.yml
Include/: Database.h  Dls.h  Dls_trad.h  Domains.h  Erreur.h  Http.h  Json.h  Websocket.h
TraductionDLS/: CMakeLists.txt  Interp.c  Makefile.am  actions.c  conditions.c  lignes.y  mots.l  options.c
TraductionDLS/.deps/: libtradDLS_la-Interp.Plo  libtradDLS_la-lignes.Plo  libtradDLS_la-mots.Plo
TraductionDLS/.libs/: libtradDLS.la
test/: README.md  docker-compose.yml  run-all-tests.sh  setup.sh  teardown.sh
test/config/: abls-habitat-api.test.conf  mosquitto-test.conf  test-data.sql
test/lib/: colors.sh  test-utils.sh
test/tests/: 01-unauthenticated.sh  02-user-auth.sh  03-domain-crud.sh  04-camera-crud.sh  05-dls.sh  06-data-integrity.sh  07-error-handling.sh
